--- a/chatkit/src/main/res/values/ids.xml
+++ b/chatkit/src/main/res/values/ids.xml
@@ -9,9 +9,11 @@
     <item name="imageOverlay" type="id" />
 
     <!-- MESSAGE INPUT -->
+    <item name="emoticonButton" type="id" />
     <item name="attachmentButton" type="id" />
     <item name="messageSendButton" type="id" />
     <item name="attachmentButtonSpace" type="id" />
+    <item name="emoticonButtonSpace" type="id" />
     <item name="sendButtonSpace" type="id" />
     <item name="messageInput" type="id" />
 
