fix: add emoti attr in chatkit

--- a/chatkit/src/main/res/values/attrs.xml
+++ b/chatkit/src/main/res/values/attrs.xml
@@ -13,11 +13,12 @@
         <attr name="inputButtonDefaultIconPressedColor" format="color|reference"/>
         <attr name="inputButtonDefaultIconDisabledColor" format="color|reference"/>
 
-        <attr name="inputButtonMargin" format="dimension|reference"/>
         <attr name="inputButtonWidth" format="dimension|reference"/>
         <attr name="inputButtonHeight" format="dimension|reference"/>
 
         <attr name="showAttachmentButton" format="boolean"/>
+        <attr name="showEmoticonButton" format="boolean"/>
+
         <attr name="attachmentButtonBackground" format="reference"/>
         <attr name="attachmentButtonDefaultBgColor" format="color|reference"/>
         <attr name="attachmentButtonDefaultBgPressedColor" format="color|reference"/>
@@ -32,6 +33,20 @@
         <attr name="attachmentButtonWidth" format="dimension|reference"/>
         <attr name="attachmentButtonHeight" format="dimension|reference"/>
 
+        <attr name="emoticonButtonBackground" format="reference"/>
+        <attr name="emoticonButtonDefaultBgColor" format="color|reference"/>
+        <attr name="emoticonButtonDefaultBgPressedColor" format="color|reference"/>
+        <attr name="emoticonButtonDefaultBgDisabledColor" format="color|reference"/>
+
+        <attr name="emoticonButtonIcon" format="reference"/>
+        <attr name="emoticonButtonDefaultIconColor" format="color|reference"/>
+        <attr name="emoticonButtonDefaultIconPressedColor" format="color|reference"/>
+        <attr name="emoticonButtonDefaultIconDisabledColor" format="color|reference"/>
+
+        <attr name="emoticonButtonMargin" format="dimension|reference"/>
+        <attr name="emoticonButtonWidth" format="dimension|reference"/>
+        <attr name="emoticonButtonHeight" format="dimension|reference"/>
+
         <attr name="inputMaxLines" format="integer"/>
         <attr name="inputHint" format="string"/>
 
@@ -42,6 +57,8 @@
 
         <attr name="inputBackground" format="reference"/>
         <attr name="inputCursorDrawable" format="reference"/>
+
+        <attr name="delayTypingStatus" format="integer"/>
     </declare-styleable>
 
     <attr name="MessagesList" format="reference"/>
