--- a/chatkit/src/main/res/values/attrs.xml
+++ b/chatkit/src/main/res/values/attrs.xml
@@ -13,6 +13,7 @@
         <attr name="inputButtonDefaultIconPressedColor" format="color|reference"/>
         <attr name="inputButtonDefaultIconDisabledColor" format="color|reference"/>
 
+        <attr name="inputButtonMargin" format="dimension|reference"/>
         <attr name="inputButtonWidth" format="dimension|reference"/>
         <attr name="inputButtonHeight" format="dimension|reference"/>
 
